--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ highlighter: pygments
 # The path structure for blog posts.
 permalink: /blog/:year/:month/:day/:title.html
 
+
 # Sections on the "people" page.
 roles:
   - key: faculty
@@ -29,13 +30,25 @@ roles:
 # Number of news stories on the front page.
 front_page_news: 8
 
+front_page_pres: 3
+
 # Base pathname for links.
 base: ''
 
 # make pages for the _projects folder
+
+
+
+
 collections:
   projects:
     output: true
+  papers:
+    output: true
+    permalink: /paper/:year/:month/:day/:title.html
+
+
+
 
 # Navigation bar links.
 navigation:
