add new project and paper

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -105,6 +105,10 @@
     display_name: "徐晓伟"
     role: alum
     bio: "2018届硕士研究生，就职于腾讯"
+王鹏飞:
+    display_name: "王鹏飞"
+    role: alum
+    bio: "2019届博士研究生" 
 
 #特聘专家
 熊辉:
