--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ roles:
     name: 毕业生
   - key: special_faculty
     name: 特聘专家
+  - key: visiting_student
+    name: 访问学生与访问学者
 
 # Number of news stories on the front page.
 front_page_news: 8
